--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,15 @@
-# Logs
-logs
+# --- Node / Vite ---
+node_modules/
+dist/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# --- Environment files ---
+.env
+.env.*
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# --- VS Code workspace ---
+.vscode/
+
+# --- macOS / Windows noise ---
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
